<resources>
    <string name="app_name">Kalpavriksha</string>
    <string name="nav_header_title">MWB Tech</string>
    <string name="nav_header_subtitle">mwb.tech@tech.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="yahoo_finance_api_key" translatable="false">cf95f461f2mshe7d87580eb1d7cep1f2d2bjsnce8cbf423936</string>
    <string name="menu_slideshow">Update Profile</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="name">Name</string>
    <string name="error_occurred">An error Occurred</string>
    <string name="error_details">Error Details</string>
    <string name="unknown_exception">Unknown Exception</string>
    <string name="restart_app">Restart App</string>
    <string name="close_app">Close App</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="mobile_no1">Mobile Number</string>
    <string name="cpassword">Confirm Password</string>
    <string name="delete">Delete</string>
    <string name="delete1">Do you want to delete chat ?</string>
    <string name="txt_referal">Referral code (If Any)</string>
    <string name="message_delete">Do you want to delete message ?</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_logout_text">Do you want to log out ?</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="sub">Enter Subject</string>
    <string name="support_msg">Support Will Be Provided During Working Hours (10am-6pm)</string>
    <string name="alert_delete">Do you want delete dealer ? </string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="call">Do you want to call this number ?</string>
    <string name="photo">Do you want to send enquiry with picture ?</string>
    <string name="copy_right" translatable="false">Copyrights © MWB Technologies India Pvt Ltd 2020</string>
    <string name="about"></string>
    <string name="submit">Submit</string>
    <string name="error_player">There Was An Error Initializing The Youtube Player (%1$s)</string>
    <string name="hello_word">Hello World</string>
    <string name="show_selected_states"><u>View Selected States</u></string>
    <string name="show_preview"><u>Preview Advertisement</u></string>
    <string name="change_image"><u>Add Image</u></string>
    <string name="change_text"><u>Add Text</u></string>
    <string name="show_selected_district"><u>View Selected District</u></string>
    <string name="show_selected_city"><u>View Selected Cities</u></string>
    <string name="show_invoice"><u>Proforma Invoice</u></string>
    <string name="advertisement_details"><u>Advertisement Details</u></string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="share">share</string>
    <string name="facebook_app_id">2516504071829944</string>
    <string name="fb_login_protocol_scheme">fb2516504071829944</string>
    <string name="facebook_client_token">27def05c2556248a77ec5d64e60213d4</string>
    <string name="create_your">Create your own\n business plan</string>
    <string name="study_according_to_the_study_plan_make_study_more_motivated">Study according to the study plan, make study more motivated</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="log_in"><u>Log in</u></string>
    <string name="format_code_sent_to">Code is sent to </string>
    <string name="text_verify_phone">Verify Number</string>
    <string name="text_verify_and_create_account">Verify and Create Account</string>
    <string name="text_resend_otp">Didn\'t receive the OTP? <font color="#f64c73"><u>RESEND OTP</u></font></string>
    <string name="text_resend_otp_in">Resend OTP In</string>
    <string name="resend"><u>RESEND OTP</u></string>
    <string name="format_check_email_for_code">Please check your phone ******%1$s to see the verification code</string>
    <string name="text_verify">Verify</string>
    <string name="label_otp_verification">OTP Verification</string>
    <string name="text_otp_code">OTP Code</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_enter_email_account_to_reset_password">Enter your registered mobile number\nto reset  your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="text_registration_completed">You Are Successfully Registered as <b>Buyer</b></string>
    <string name="text_sent_password_recovery_instruction">We have send password recovery instruction to your phone</string>
    <string name="text_check_your_email">Check your phone</string>
    <string name="action_ok_caps_on">OK</string>
    <string name="format_resend_otp_in_seconds">%1$d</string>
    <string name="hint_search_for_chats_and_messages"><![CDATA[Search for chats & messages]]></string>
    <string name="skip_btn"><![CDATA[Skip>>]]></string>
    <string name="text_your_order_is_being_prepared"><u>Your order is being prepared</u></string>
    <string name="text_advertise_here">Advertise Here</string>
    <string name="text_enquiry_received">Enquiry Received</string>
    <string name="text_enquiry_sent">Enquiry Sent</string>
    <string name="text_new_enquiry">New Enquiry</string>
    <string name="text_group_enquiry">Group Enquiry</string>
    <string name="text_favourite_chat">Favourite Chat</string>
    <string name="text_new_user">New User</string>
    <string name="text_i_agree">I Agree</string>
    <string name="text_existing_user">Existing User</string>
    <string name="contact_us_kalpavriksha_support_wbtechindia_com"><font color="#000000">Contact Us:</font><font color="#EF5353"> kalpavriksha.support@wbtechindia.com</font></string>
    <string name="text_current_aired_advertisements">Current Aired advertisements</string>
    <string name="text_my_live_advertisement">My Live Advertisement</string>
    <string name="text_advertisements_related_to_registered_category">Advertisements related to registered\ncategory</string>
    <string name="text_live_advertisement">Live Advertisement</string>
    <string name="text_my_advertisement">My Advertisement</string>
    <string name="text_all_my_advertisements">All my advertisements</string>
    <string name="text_book_your_advertisement">Book Your Advertisement</string>
    <string name="text_get_estimate_for_your_advertisements">Get estimate for your advertisements</string>
    <string name="text_continue_as_buyer">Continue as <b><u>Buyer</u></b></string>
    <string name="text_to_register_as_seller_n_proceed_with_kyc">Proceed with KYC \n to continue as <b><u>Seller</u></b></string>
    <string name="text_to_register_as_professional_n_proceed_with_kyc">Proceed with KYC \n to continue as <b><u>Professional</u></b> </string>
    <string name="text_buyer"><u>Buyer</u></string>
    <string name="hint_search_by_product_name_enquiry_type">Search by product name/enquiry type</string>
    <string name="text_no_replies_for_your_requirement">No replies for your requirement</string>
    <string name="hint_search_by_party_name">Search by Party name</string>
    <string name="kalpavriksha_biometric_login">Kalpavriksha Biometric Login</string>
    <string name="login_using_biometric_credentials">Log in using your biometric credential</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="do_you_really_want_to_switch">Do you really want to switch?</string>
    <string name="allow_login_using_bimetric">Allow login using fingerprint</string>
    <string name="multiple_city_selection">You can select up to 4 cities. Do you want to select more cities?</string>
    <string name="are_you_sure_you_want_to_delete_all_notifications">Are you sure, you want to delete all notifications?</string>
    <string name="are_you_sure_you_want_to_delete_this_notifications">Are you sure, you want to delete this notification?</string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_login">Log In</string>
    <string name="txt_googlelogin">Login With Google</string>
    <string name="txt_facebooklogin">Login With Facebook</string>
    <string name="txt_register">Register</string>
    <string name="txt_enterfirm">Firm Name / Company name</string>
    <string name="txt_enterpincode">Pin Code</string>
    <string name="txt_enteremail">Email</string>
    <string name="txt_terms"><u>I agree to the Terms and Condition</u></string>
    <string name="txt_termscondition">Terms and Conditions</string>
    <string name="txt_businessNews">Business</string>
    <string name="txt_internationalNews">International</string>
    <string name="txt_entnews">Entertainment</string>
    <string name="txt_technologynews">Technology</string>
    <string name="txt_sportsnews">Sports</string>
    <string name="txt_genernews">General</string>
    <string name="txt_healthnews">Health Science</string>
    <string name="txt_newsheader">Latest News</string>
    <string name="txt_nonews">No News Available For This Category</string>
    <string name="txt_latestnews">News And Updates</string>
    <string name="txt_remeberme">Remember me</string>
    <string name="txt_businesstype">Business Type</string>
    <string name="txt_searchbynamecity">Please Search by Name / City Name</string>
    <string name="txt_enquiryselectcity">Please select city of Business (Where you want to Buy/Sell the Product)</string>
    <string name="txt_selectone"> Why Do You Need This (Select Only One)</string>
    <string name="txt_searchstate">Search State</string>
    <string name="txt_searchcity">Search City</string>
    <string name="txt_selectTranstype">Transaction Type(Select any One)</string>
    <string name="txt_selectCategory">Please Select Categories</string>
    <string name="txt_buy">Buy</string>
    <string name="txt_Sell">Sell</string>
    <string name="txt_professionreq">Professionals Requirement</string>
    <string name="txt_businessdemandheader">Business Demand (Approximately)</string>
    <string name="txt_selectionofuse">Why do you need this (Select Only One)</string>
    <string name="txt_businessUse">Business Use</string>
    <string name="txt_selfUse">Self Use</string>
    <string name="txt_briefbusiness">Brief your requirement</string>
    <string name="txt_briefprofessional">Enter details of the person enquired for</string>
    <string name="txt_businessowner">Business owner</string>
    <string name="txt_professional">Professional</string>
    <string name="txt_searchproduct">Select Product/Service</string>
    <string name="txt_search">Search</string>
    <string name="txt_nodata">No Data Available</string>
    <string name="txt_Inbox">Inbox</string>
    <string name="txt_fav">Favourites</string>
    <string name="btn_apply">APPLY</string>
    <string name="btn_fromdate">From Date</string>
    <string name="txt_typemsg">Type a message</string>
    <string name="txt_firmname">Shop/Firm/Company Name</string>
    <string name="label_btn_english">English</string>
    <string name="label_btn_kannada">ಕನ್ನಡ</string>
    <string name="label_btn_hindi">हिंदी</string>
    <string name="label_btn_Urdu">اردو</string>
    <string name="label_btn_Gujarathi">ગુજરાતી</string>
    <string name="label_btn_Telugu">తెలుగు</string>
    <string name="label_btn_Tamil">தமிழ்</string>
    <string name="label_btn_Malayalam">മലയാളം</string>
    <string name="msg_welcome">Please select your language</string>
    <string name="sharenow">Refer-A-Friend </string>
    <string name="contact_us">Contact Us</string>
    <string name="user_logout">User Logout</string>
    <string name="support">Support</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
</resources>