<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/img_nav_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="start"
        android:background="@drawable/shape_circle_grey_light"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_4sdp"
        app:srcCompat="@drawable/back_white"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/label_otp_verification"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/format_check_email_for_code"
        android:textColor="@color/textLightGrey"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_margin="@dimen/_20sdp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/text_otp_code"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:textColor="@color/black"
        app:OtpItemCount="4"
        app:OtpItemHeight="@dimen/_50sdp"
        app:OtpItemRadius="@dimen/_8sdp"
        app:OtpItemSpacing="@dimen/_20sdp"
        app:OtpItemWidth="@dimen/_50sdp"
        app:OtpLineColor="@color/otpViewBorderColor"
        app:OtpViewType="rectangle">

        <requestFocus />
    </com.mukesh.OtpView>

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/shape_rectangle_red_circular_corners"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/text_verify"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_resend_otp"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/_4sdp"
            android:text="@string/text_resend_otp_in"
            android:textColor="@color/textLightGrey" />

        <TextView
            android:id="@+id/resend_otp_timer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/textLightGrey" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/resend_otp_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_4sdp"
        android:text="@string/text_resend_otp"
        android:textColor="@color/textLightGrey" />

</LinearLayout>