<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/checkIv"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="138dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_mail" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_check_your_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/text_sent_password_recovery_instruction"
                android:textColor="@color/textLightGrey"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/shape_rectangle_red_circular_corners"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="@dimen/_10sdp"
                android:text="@string/action_ok_caps_on"
                android:textAllCaps="true" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>