<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"

    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/img_nav_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="start"
        android:background="@drawable/shape_circle_grey_light"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_4sdp"
        app:srcCompat="@drawable/back_white"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/text_enter_email_account_to_reset_password"
        android:textColor="@color/textLightGrey"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_margin="@dimen/_20sdp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:maxLength="10"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/shape_rectangle_filled_grey_circular_corners"
        android:hint="Enter Mobile Number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/shape_rectangle_red_circular_corners"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/text_reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>